# ml-interview-prep-kit

./: .gitignore  CNAME  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  index-v1.html  index.html  mindmap.html  mkdocs.yml  ml-knowledge-map-data.js  pyproject.toml
.github/workflows/: pages.yml
career-frameworks/: index.md  negotiation-strategy.md  offer-decision-matrix.md  star-stories-guide.md  strategy-template.md
coding-practice/: README.md
coding-practice/by-topic/: arrays-strings.md  dynamic-programming.md  linked-lists.md  math-statistics.md  sorting-searching.md  trees-graphs.md
coding-practice/data-structures/: linked-list-tree-basics.ipynb
coding-practice/templates/: notes-template.md  problem-template.py
docs-assets/css/: kb-toc-preload.css
docs-assets/js/: kb-toc.js  map-links.js  map-slug-lookup.js  mathjax.js  theme-sync.js
interview-tracking/: README.md  _structure-guide.md
interview-tracking/_example-company/: README.md  research.md
knowledge-base/: index.md  ml-ds-llm-fundamentals.md  scenarios.md  sql-fundamentals.md
overview-prototypes/: README.md  bento.html  mission.html  skilltree.html
project-case-study/: ml-prediction-marketplace.md
prompt-templates/: README.md  add-knowledge-topic.md  check-broken-links.md  interview-debrief.md  interview-prep-drill.md  new-company-setup.md  setup-interview-round.md
scripts/: .pii-terms.example.json  build-docs.sh  check-links.py  fix-md-lists.py  kb-sync.py  pii-scan.py  scrub-grab-terms.py
system-design/: index.md  rag-customer-support.md  template.md
(+17 files in other folders)
