[project]
name = "ml-interview-prep-kit"
version = "1.0.0"
description = "A comprehensive toolkit for ML/AI/Data Science interview preparation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-exclude>=1.0.2",
    "mkdocs-material>=9.7.6",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
